k8s/gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  namespace: dev

spec:
  replicas: 2

  selector:
    matchLabels:
      app: api-gateway

  template:
    metadata:
      labels:
        app: api-gateway

    spec:
      containers:
      - name: api-gateway
        image: api-gateway:v2
        imagePullPolicy: Never

        ports:
        - containerPort: 5002

        readinessProbe:
          httpGet:
            path: /health
            port: 5002
          initialDelaySeconds: 5
          periodSeconds: 5

        livenessProbe:
          httpGet:
            path: /health
            port: 5002
          initialDelaySeconds: 10
          periodSeconds: 10

---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: dev

spec:
  selector:
    app: api-gateway

  ports:
  - port: 80
    targetPort: 5002

  type: ClusterIP
