k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: enterprise-ingress
  namespace: dev

spec:
  ingressClassName: nginx

  rules:
  - host: enterprise.local

    http:
      paths:

      - path: /employees
        pathType: Prefix

        backend:
          service:
            name: api-gateway
            port:
              number: 80

      - path: /auth
        pathType: Prefix

        backend:
          service:
            name: api-gateway
            port:
              number: 80
